--- a/study/练习/02_我的备忘录/demo.html
+++ b/study/练习/02_我的备忘录/demo.html
@@ -2,11 +2,23 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>我的备忘录</title>
 </head>
 <body ng-app="todoApp" >
 
+<div  ng-controller="todoController">
 
+  <h2>我的备忘录</h2>
+<div>
+  <input type="text" ng-model="newTodo">
+  <button ng-click="addItem()">新增</button>
+</div>
+<div ng-repeat="todo in todos">
+<input type="checkbox" ng-model="todo.isFinish">
+<span>{{todo.thing}}</span>
+</div>
+<button ng-click="removeItem()">删除选中事项</button>
+</div>
 
 <script type="text/javascript" src="../../js/angular-1.5.5/angular.js"></script>
 <script type="text/javascript" src="app.js"></script>
